# tai-webhook-verifier-github

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  NOTICE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  notify-docs.yml  release.yml
src/tai42_webhook_verifier_github/: __init__.py  tai-plugin.yml  verifier.py
src/tai_webhook_verifier_github/: __init__.py  tai-plugin.yml  verifier.py
tests/: conftest.py  test_import_graph.py  test_plugin_spec.py  test_verifier.py
